@startuml
skinparam classAttributeIconSize 0

class SP
class QPS
class PKB

interface IPKBPopulator {
	void populate(Entity[])
    void populate(Relationship[])
    void populate(Pattern[])
}

interface IPKBQuerier {
	Entity[] getEntities(EntityType)
	Entity[] getByRelationship(RsType, Entity, bool)
	Entity[] getByPattern(Entity, String, bool)
	Entity[] getEntities(String)
	Map<EntityType, int> getSimpleStats()
}

class PKB {
	void populate(Entity[])
    void populate(Relationship[])
    void populate(Pattern[])
	EntityPointerUnorderedSet getEntities(EntityType)
	EntityPointerUnorderedSet getByRelationship(RsType, Entity, bool)
	EntityPointerUnorderedSet getByPattern(Entity, String, bool)
	EntityPointerUnorderedSet getEntities(String)
	Map<EntityType, int> getSimpleStats()
}

class EntityManager {
    EntityTable GetTable(EntityType)
    void Populate(Vector<Entity *>)
    Entity[] Get(EntityType)
    Entity[] Get(String)
    Map<EntityType, int> Get()
}

class RelationshipManager {
    void CreateTable(RsType)
    void ClearCache()
    void Populate(Relationship[])
    RelationshipTable* GetTable(RsType)
    Entity[] Get(RsType, Entity, bool)
    Entity[] GetAll(RsType, Entity, bool)
}

class PatternManager {
    PatternTable GetTable()
    void Populate(Pattern[])
    Entity[] Get(Entity, String, bool)
}

class RelationshipTable {
    void Populate(Relationship)
    EntityPointerUnorderedMap GetTable(bool)
    Entity[] Get(Entity, bool)
}

class EntityTable {
    void Populate(Entity)
    Entity[] Get()
}

class PatternTable {
    void Populate(Pattern)
    PatternEntityUnorderedMap GetTable()
    Entity[] Get(Entity)
}

class Cache {
    void UpdateAccess(K)
    void Evict()
    void Add(K, V)
    Result Get(K)
    void Clear()
    int Size()
    int Hits()
    int Misses()
}

struct Result {
    V value
    bool found
}

class VariableTable {
}

class ReadTable {
}

class PrintTable {
}

class CallTable {
}

class IfTable {
}

class WhileTable {
}

class ConstantTable {
}

class ProcedureTable {
}

class AssignTable {
}

class ModifiesTable {
}

class FollowsTable {
}  

class UsesTable {
}

class ParentTable {
} 

class CallsTable {
} 

class NextTable {
} 

IPKBPopulator <|.down. PKB
IPKBQuerier <|.down. PKB
SP -down- IPKBPopulator
QPS -down- IPKBQuerier

PKB *-down- EntityManager
PKB *-down- PatternManager
PKB *-down- RelationshipManager

EntityTable -up-* EntityManager

VariableTable -up-|> EntityTable
ReadTable -up-|> EntityTable
PrintTable -up-|> EntityTable
CallTable -up-|> EntityTable
IfTable -up-|> EntityTable
WhileTable -up-|> EntityTable
ConstantTable -up-|> EntityTable
ProcedureTable -up-|> EntityTable
AssignTable -up-|> EntityTable

RelationshipTable -up-* RelationshipManager 

ModifiesTable -up-|> RelationshipTable
FollowsTable -up-|> RelationshipTable 
UsesTable -up-|> RelationshipTable
ParentTable -up-|> RelationshipTable 
CallsTable -up-|> RelationshipTable 
NextTable -up-|> RelationshipTable 

PatternTable -up-* PatternManager

RelationshipManager *-down- Cache
Result -up-* Cache

@enduml